--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ apply from: 'jacoco.gradle'
 def versionMajor = 1
 def versionMinor = 1
 def versionPatch = 0
-def versionBuild = 0 // bump for dogfood builds, public betas, etc.
+def versionBuild = 1 // bump for dogfood builds, public betas, etc.
 
 
 class Config {
@@ -108,7 +108,7 @@ android {
             useProguard true
             shrinkResources true
             //TODO Disable for Google Play Store apk
-            testCoverageEnabled true
+            testCoverageEnabled false
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -217,6 +217,7 @@ dependencies {
     compile "com.google.android.gms:play-services-base:$playServicesVersion"
     compile "com.google.android.gms:play-services-ads:$playServicesVersion"
     compile "com.google.firebase:firebase-core:$playServicesVersion"
+    compile "com.google.firebase:firebase-analytics:$playServicesVersion"
     compile "com.jakewharton:butterknife:$butterknifeVersion"
     apt "com.jakewharton:butterknife-compiler:$butterknifeVersion"
     compile "com.jakewharton.timber:timber:$timberVersion"
